pyquest/ql/test/semantic_analysis/invalid/test022.ql
// Incompatible result type for greater equals operation
form testForm {
	"First Question"
	someIdentifier : integer = 10.0 >= 10
}